@@ -105,6 +105,7 @@ v 8.11.0 (unreleased)
   - Sort folders with submodules in Files view !5521
   - Each `File::exists?` replaced to `File::exist?` because of deprecate since ruby version 2.2.0
   - Print urls to create (or view) merge requests after git push !5542 (Scott Le)
+  - Add auto-completition in pipeline (Katarzyna Kobierska Ula Budziszewska)
 
 v 8.10.5
   - Add a data migration to fix some missing timestamps in the members table. !5670
